# my_pizza-main

./: .env  pizzas.db  pyproject.toml
data/: wheater.py  wheather.py
routes/: pizza.py
static/: style.css
templates/: _base.html  _macros.html  _navigation.html  index.html  menu.html
